# a2a-cloud-run

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  deploy.sh  pyproject.toml  requirements.txt
app/: config.py  main.py  proxy.py
